<resources>
   <string name="app_name" translatable="false">The Collection</string>
   <string name="title">Title</string>
   <string name="rating" translatable="false">8.4</string>
   <string name="image_description">Image List</string>
   <string name="view_detail">View Detail</string>
   <string name="overview">Overview</string>
   <string name="original_language">Original Language</string>
   <string name="runtime">Runtime</string>
   <string name="original_title">Original Title</string>
   <string name="status">Status</string>
   <string name="adult">Adult</string>
   <string name="not_adult">Not Adult</string>
   <string name="setting">Setting</string>
   <string name="language">Language</string>
   <string name="english">English</string>
   <string name="indonesian">Bahasa Indonesia</string>
   <string name="movie">Movie</string>
   <string name="tvshow">TV Show</string>
   <string name="favorite">Favorite</string>
   <string name="remove_favorite">Remove from favorite</string>
   <string name="fav_not_found">Favorite not found</string>
   <string name="search">Search</string>
   <string name="search_movie_hint">Search Movie</string>
   <string name="search_tv_hint">Search TV Show</string>
   <string name="notification">Notification</string>
   <string name="daily_reminder">Daily Reminder (7 am)</string>
   <string name="release_notification">Release Notification (8 am)</string>
   <string name="appwidget_text">Favorite Movie</string>
   <string name="add_widget">Add widget</string>
   <string name="empty_text">NO DATA</string>
   <string name="reminder_setup">Daily Reminder Set Up</string>
   <string name="release_setup">Release Notification Set Up</string>
   <string name="title_daily_reminder">Hi, I miss you</string>
   <string name="msg_daily_reminder">Please comeback for me</string>
   <string name="cancel_daily_reminder">Daily Reminder Canceled</string>
   <string name="cancel_release">Release Notification Canceled</string>
   <string name="error_connection">Connection to Server Error :(</string>
   <string name="release">release</string>
   <string name="msg_release">Let\'s see the movie</string>
   <string name="search_not_found">Search Not Found :(</string>
   <string name="not_found">Not Found</string>
</resources>
